--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <script src="countries.json"></script>
     <!--<script src="states.json"></script>-->
-    <script src="cities.json"></script>
+    <!--<script src="cities.json"></script>-->
 
 </head>
 
